{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 63,
  "lineage": "5b1e022e-41b2-1fd8-91e9-419f3bbbf90a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "microservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a5bacc58328233d",
            "arn": "arn:aws:ec2:eu-central-1:992122884453:instance/i-049b7be190ba48ac3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049b7be190ba48ac3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jumia_devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00111e33e91bb666c",
            "private_dns": "ip-10-0-1-85.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.85",
            "public_dns": "ec2-3-79-244-229.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.79.244.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01da11003bedc6dac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ee005e39ec326b2",
            "tags": {
              "Name": "jumia-sre-challenge-microservice-instance"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-microservice-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c1f9796e18da832b"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.microservice_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:internet-gateway/igw-021a8ba5b00b9a3e6",
            "id": "igw-021a8ba5b00b9a3e6",
            "owner_id": "992122884453",
            "tags": {
              "Name": "jumia-sre-challenge-igw"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-igw"
            },
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:route-table/rtb-07b6b14a9132566e8",
            "id": "rtb-07b6b14a9132566e8",
            "owner_id": "992122884453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021a8ba5b00b9a3e6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jumia-sre-challenge-public-rt"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3e9fff310fb47ab",
            "route_table_id": "rtb-07b6b14a9132566e8",
            "subnet_id": "subnet-06ee005e39ec326b2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00be0ea0e08abb74d",
            "route_table_id": "rtb-07b6b14a9132566e8",
            "subnet_id": "subnet-0881d060627457ae7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0719439f6d77e4387",
            "route_table_id": "rtb-07b6b14a9132566e8",
            "subnet_id": "subnet-09f7a237492a04590"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group/sg-00711598fd54ae99d",
            "description": "Allow HTTP traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00711598fd54ae99d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jumia-sre-challenge-alb-sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jumia-sre-challenge-alb-sg"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "microservice_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group/sg-0c1f9796e18da832b",
            "description": "Allow SSH, and traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1f9796e18da832b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH on custom port 1337",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB for Backend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00711598fd54ae99d"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB to Frontend",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00711598fd54ae99d"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "jumia-sre-challenge-microservice-sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "jumia-sre-challenge-microservice-sg"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-microservice-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group/sg-001d48e8797d336fa",
            "description": "Allow PostgreSQL traffic from microservice",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001d48e8797d336fa",
            "ingress": [],
            "name": "jumia-sre-challenge-rds-sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jumia-sre-challenge-rds-sg"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress_from_microservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL traffic from Microservice SG",
            "from_port": 5432,
            "id": "sgrule-3029961431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-001d48e8797d336fa",
            "security_group_rule_id": "sgr-0c3e7a5eae8ad1c13",
            "self": false,
            "source_security_group_id": "sg-0c1f9796e18da832b",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.microservice_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:subnet/subnet-06ee005e39ec326b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ee005e39ec326b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jumia-sre-challenge-public-subnet-1"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-public-subnet-1"
            },
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:subnet/subnet-0881d060627457ae7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0881d060627457ae7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jumia-sre-challenge-public-subnet-2"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-public-subnet-2"
            },
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:subnet/subnet-09f7a237492a04590",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f7a237492a04590",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jumia-sre-challenge-public-subnet-3"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-public-subnet-3"
            },
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:vpc/vpc-0afb98ca440359a6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00f4fded902c6f5fe",
            "default_route_table_id": "rtb-03132df399791e180",
            "default_security_group_id": "sg-0a08dc1a0aa77a782",
            "dhcp_options_id": "dopt-05d3b4ab285581091",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0afb98ca440359a6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03132df399791e180",
            "owner_id": "992122884453",
            "tags": {
              "Name": "jumia-sre-challenge-vpc"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:loadbalancer/app/jumia-sre-challenge-alb/ff1e9588d1a2e94c",
            "arn_suffix": "app/jumia-sre-challenge-alb/ff1e9588d1a2e94c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jumia-sre-challenge-alb-1916588233.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:loadbalancer/app/jumia-sre-challenge-alb/ff1e9588d1a2e94c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jumia-sre-challenge-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00711598fd54ae99d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ee005e39ec326b2"
              },
              {
                "subnet_id": "subnet-0881d060627457ae7"
              },
              {
                "subnet_id": "subnet-09f7a237492a04590"
              }
            ],
            "subnets": [
              "subnet-06ee005e39ec326b2",
              "subnet-0881d060627457ae7",
              "subnet-09f7a237492a04590"
            ],
            "tags": {
              "Name": "jumia-sre-challenge-alb"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-alb"
            },
            "vpc_id": "vpc-0afb98ca440359a6e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_instance.microservice",
            "aws_security_group.alb_sg",
            "aws_security_group.microservice_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:listener/app/jumia-sre-challenge-alb/ff1e9588d1a2e94c/ad914df7ba70df82",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:targetgroup/jumia-sre-challenge-tg-frontend/da248500d678b1eb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:listener/app/jumia-sre-challenge-alb/ff1e9588d1a2e94c/ad914df7ba70df82",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:loadbalancer/app/jumia-sre-challenge-alb/ff1e9588d1a2e94c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.microservice",
            "aws_security_group.alb_sg",
            "aws_security_group.microservice_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.elb.aws_lb.main",
            "module.elb.aws_lb_target_group.frontend"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:targetgroup/jumia-sre-challenge-tg-frontend/da248500d678b1eb",
            "arn_suffix": "targetgroup/jumia-sre-challenge-tg-frontend/da248500d678b1eb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:targetgroup/jumia-sre-challenge-tg-frontend/da248500d678b1eb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:992122884453:loadbalancer/app/jumia-sre-challenge-alb/ff1e9588d1a2e94c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jumia-sre-challenge-tg-frontend",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jumia-sre-challenge-tg-frontend"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-tg-frontend"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "dependencies": [
            "aws_instance.microservice",
            "aws_security_group.alb_sg",
            "aws_security_group.microservice_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:targetgroup/jumia-sre-challenge-tg-frontend/da248500d678b1eb-20250328112011091600000002",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:992122884453:targetgroup/jumia-sre-challenge-tg-frontend/da248500d678b1eb",
            "target_id": "i-049b7be190ba48ac3"
          },
          "dependencies": [
            "aws_instance.microservice",
            "aws_security_group.alb_sg",
            "aws_security_group.microservice_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.elb.aws_lb_target_group.frontend"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a5bacc58328233d",
            "arn": "arn:aws:ec2:eu-central-1:992122884453:instance/i-03558c234ec3f9a57",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03558c234ec3f9a57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jumia_devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056906d399033cd13",
            "private_dns": "ip-10-0-2-237.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.237",
            "public_dns": "ec2-18-195-119-248.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.119.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa3480b90364fe81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0881d060627457ae7",
            "tags": {
              "Name": "jumia-sre-challenge-jenkins"
            },
            "tags_all": {
              "Name": "jumia-sre-challenge-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060f7fd10457b6ff2"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "module.jenkins.aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group/sg-060f7fd10457b6ff2",
            "description": "Allow HTTP and SSH access for Jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060f7fd10457b6ff2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access for Jenkins UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access on port 1337",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "jumia-sre-challenge-jenkins-sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afb98ca440359a6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}